--- a/sightline/test-output/old/Smoke Suite/classes.html
+++ b/sightline/test-output/old/Smoke Suite/classes.html
@@ -4,409 +4,55 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testScriptsSmoke.TS_010_Workflow</td>
+<td>testScriptsRegression.ICE_Regression</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Test</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_012_ValidateReportsFunctionality</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>customDDRExportAfterSwap</td>
+<td>PAExceptionFileFromDatasetScreen</td>
 <td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>conceptExplorer</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>communicationExplorer</td>
+<td>DragAndDropSAToPA</td>
 <td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>tallySubTally</td>
-<td>regression smoke </td>
+<td>BulkUserAccessControlHasDatasetOption</td>
+<td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>reviewProgressByRevReport</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
+<td>PAExceptionFileFromManageScreen</td>
+<td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeClass</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
+<td>PMUploadAndDeleteFile</td>
+<td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
+<td>VerifyEditUserHasDatasetOption</td>
+<td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
+<td>DragAndDropMultipleUsers</td>
+<td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_009_ValidateAssignmentFunctionality</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
+<td>datasetOptionDisplayedIfChecked</td>
+<td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreateQuickBatch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateAssignmentDistributeToReviwer</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>preCondition</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_006_ValidateBatchPrint</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>BatchPrintWithNative</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_005_ValidateCategorization</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>validateCategorization</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>preConditions</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_003_AdvancedSearchBulkActions</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bulkTagInAdvancedSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bulkFolderInAdvancedSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>preCondition</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_011_DocViewNonAudioReviewer</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addCommentandcompleteDoc</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addredaction</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addRemarkToFirstDoc</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>preCondition</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_004_BasicAndAdvancedSearchOperations</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>contentSearchWithOperatorsInBS</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>metaDataSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>proximityAndRegExInBS</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>audioSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>contentSearchWithOperatorsInAS</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ConceptualSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>searchsavedSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>preCondition</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_018_DocViewAudio</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addRemark</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>AudioDownload</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addreduction</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addComment</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addPlay</td>
-<td>regression smoke </td>
+<td>PAUDupeAllFiles</td>
+<td>regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -419,10 +65,6 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
@@ -437,250 +79,29 @@
 <td>close</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>testScriptsSmoke.TS_013_ValidateBatchUpload</td>
+<td>testScriptsSmoke.TS_019_ICEWorkFlow</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>batchUploadByReviewer</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>batchUploadByRMU</td>
-<td>regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>batchUploadByPA</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>preCondition</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_017_DocList</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>doclistToDocView</td>
+<td>PMUploadAndRefresh</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>doclistBulkRelease</td>
+<td>SystemAdminUserVerifications</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>bulkTagAndBulkFolder</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>preCondition</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_006_Production</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>AddNewProduction</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>preCondition</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_007_SavedSearchShareSchedule</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>saveSearchToDocList</td>
+<td>RMUploadAndInitiate</td>
 <td>regression smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>scheduleSavedSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>saveSearchToDocView</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>shareSavedSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>preCondition</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_008_AllManageModules</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>DeleteFolderField</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateCodingform</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateSecurityGroup</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>createCommentField</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>createRedactionLabel</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>DeleteTagField</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateFolderField</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>createKeywordField</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateAnnotationLayer</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateTagField</td>
+<td>PMUploadAndInitiate</td>
 <td>regression smoke </td>
 </tr>
 <tr>
@@ -693,69 +114,6 @@
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>takeScreenShot</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>close</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testScriptsSmoke.TS_003_BulkActionsFromBasicSearch</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>viewInDoclistInBasicSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bulkFolderInBasicSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>viewInDocViewInBasicSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>viewInTallyResultsInBasicSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bulkTagInBasicSearch</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>preCondition</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>beforeTestMethod</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
